--- a/compiler/template/native/testdata/step/basic/tmpl.yml
+++ b/compiler/template/native/testdata/step/basic/tmpl.yml
@@ -8,7 +8,7 @@ steps:
     image: {{ .image }}
     {{ .pull_policy }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
 
   - name: test
     commands:
@@ -16,7 +16,7 @@ steps:
     image: {{ .image }}
     {{ .pull_policy }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
 
   - name: build
     commands:
@@ -27,4 +27,4 @@ steps:
     image: {{ .image }}
     {{ .pull_policy }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
