--- a/compiler/template/native/testdata/step/conditional/tmpl.yml
+++ b/compiler/template/native/testdata/step/conditional/tmpl.yml
@@ -13,7 +13,7 @@ steps:
     image: {{ .image }}
     {{ .pull_policy }}
     ruleset:
-      event: [ push, pull_request, delete ]    
+      event: [ push, pull_request ]    
 
   {{ end }}
 
@@ -23,7 +23,7 @@ steps:
     image: {{ .image }}
     {{ .pull_policy }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
 
   - name: build
     commands:
@@ -34,4 +34,4 @@ steps:
     image: {{ .image }}
     {{ .pull_policy }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
