--- a/compiler/template/native/testdata/step/loop_map/tmpl.yml
+++ b/compiler/template/native/testdata/step/loop_map/tmpl.yml
@@ -12,7 +12,7 @@ steps:
     image: golang:latest
     {{ $pull }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
 
   {{ range $key, $value := .images }}
 
@@ -22,7 +22,7 @@ steps:
     image: {{ $value }}
     {{ $pull }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
 
   {{ end }}
 
@@ -35,4 +35,4 @@ steps:
     image: golang:latest
     {{ $pull }}
     ruleset:
-      event: [ push, pull_request, delete ]
+      event: [ push, pull_request ]
