--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,17 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>go-vela/renovate-config"
+  ],
+  "regexManagers": [
+    {
+      "description": "Update docker images in go files",
+      "fileMatch": [
+        "^.*\\.go$"
+      ],
+      "matchStrings": [
+        "\\/\\/ renovate: image=(?<depName>.*?)\\s+?.*[:|=]\\s+\"(?<currentValue>.*)\"\\,?"
+      ],
+      "versioningTemplate": "docker"
+    }
   ]
 }
