fix(renovate): add datasourceTemplate
closes https://github.com/go-vela/server/issues/254

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,7 +12,8 @@
       "matchStrings": [
         "\\/\\/ renovate: image=(?<depName>.*?)\\s+?.*[:|=]\\s+\"(?<currentValue>.*)\"\\,?"
       ],
-      "versioningTemplate": "docker"
+      "versioningTemplate": "docker",
+      "datasourceTemplate": "docker"
     }
   ]
 }
