enhance(compiler): add ruledata option to CompileLite

--- a/compiler/native/testdata/golang_inline_stages.yml
+++ b/compiler/native/testdata/golang_inline_stages.yml
@@ -8,6 +8,9 @@ stages:
       steps:
         - name: {{ $stage }}
           image: {{ default "alpine" $.image }}
+          ruleset:
+            event: tag
+            tag: v*
           commands:
             - echo hello from {{ $stage }}
   {{ end }}
