--- a/compiler/native/testdata/inline_with_stages.yml
+++ b/compiler/native/testdata/inline_with_stages.yml
@@ -22,3 +22,10 @@ stages:
         image: alpine
         commands:
           - echo from inline
+      - name: ruleset
+        image: alpine
+        ruleset:
+          event: push
+          branch: main
+        commands:
+          - echo from inline ruleset
