--- a/compiler/native/testdata/inline_with_steps.yml
+++ b/compiler/native/testdata/inline_with_steps.yml
@@ -18,3 +18,16 @@ steps:
     image: alpine
     commands:
       - echo from inline
+  - name: ruleset
+    image: alpine
+    ruleset:
+      event: deployment
+      target: production
+    commands:
+      - echo from inline ruleset
+  - name: other ruleset
+    image: alpine
+    ruleset:
+      path: [ "src/*", "test/*" ]
+    commands:
+      - echo from inline ruleset
