--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,13 +65,16 @@ services:
   # https://go-vela.github.io/docs/administration/worker/
   worker:
     container_name: worker
-    image: target/vela-worker:latest
+    # image: target/vela-worker:latest
+    build:
+      context: ../worker
+      dockerfile: Dockerfile
     networks:
       - vela
     environment:
       EXECUTOR_DRIVER: linux
       QUEUE_DRIVER: redis
-      VELA_BUILD_LIMIT: 1
+      VELA_BUILD_LIMIT: 3
       VELA_BUILD_TIMEOUT: 30m
       VELA_LOG_LEVEL: trace
       VELA_RUNTIME_DRIVER: docker
