enhance(templates): inject template name as variable

--- a/compiler/native/testdata/long_template.yml
+++ b/compiler/native/testdata/long_template.yml
@@ -23,6 +23,7 @@ steps:
   - name: build
     commands:
       - ./gradlew build
+      - echo {{ .VELA_TEMPLATE_NAME }}
     environment: {{ .environment }}
     image: {{ .image }}
     {{ .pull_policy }}
