--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,10 +65,7 @@ services:
   # https://go-vela.github.io/docs/administration/worker/
   worker:
     container_name: worker
-    # image: target/vela-worker:latest
-    build:
-      context: ../worker
-      dockerfile: Dockerfile
+    image: target/vela-worker:latest
     networks:
       - vela
     environment:
