--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: create spec
       run: |
-        sudo make spec-install
+        make spec-install
         make spec
 
     - name: upload spec
