fix: compose options

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,11 +44,14 @@ services:
       VELA_ENABLE_SECURE_COOKIE: 'false'
       VELA_REPO_ALLOWLIST: '*'
       VELA_SCHEDULE_ALLOWLIST: '*'
-      VELA_ENABLE_TRACING: true
-      VELA_TRACING_SERVICE_NAME: 'vela-server'
-      VELA_TRACING_SAMPLE_RATIO: 1
-      VELA_TRACING_SAMPLE_RATELIMIT_PER_SECOND: 1
-      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      VELA_OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      VELA_OTEL_TRACING_ENDPOINT: jaeger:4318
+      VELA_OTEL_TRACING_ENABLE: true
+      VELA_OTEL_TRACING_SERVICE_NAME: vela-server
+      VELA_OTEL_TRACING_RESOURCE_ATTRIBUTES: "process.runtime.name=go"
+      VELA_OTEL_TRACING_RESOURCE_ENV_ATTRIBUTES: "deployment.environment=CLOUD_ENVIRONMENT"
+      VELA_OTEL_TRACING_SAMPLER_RATIO: 1
+      VELA_OTEL_TRACING_SAMPLER_RATELIMIT_PER_SECOND: 0.2
     env_file:
       - .env
     restart: always
