--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,12 +7,11 @@
     {
       "description": "Update docker images in go files",
       "fileMatch": [
-        "^.*\\.go$"
+        "^cmd/vela-server/.+\\.go$"
       ],
       "matchStrings": [
-        "\\/\\/ renovate: image=(?<depName>.*?)\\s+?.*[:|=]\\s+\"(?<currentValue>.*)\"\\,?"
+        "\"(?<depName>.*?):(?<currentValue>[^\"]*?)@(?<currentDigest>sha256:[a-f0-9]+)\",? // renovate: container"
       ],
-      "versioningTemplate": "docker",
       "datasourceTemplate": "docker"
     }
   ]
