--- a/compiler/native/testdata/clone_replace.yml
+++ b/compiler/native/testdata/clone_replace.yml
@@ -5,7 +5,7 @@ metadata:
 
 steps:
   - name: clone
-    image: target/vela-git:v0.5.1
+    image: target/vela-git-slim:v0.12.0
     parameters:
       depth: 5
     pull: always
