--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,9 @@ services:
       VELA_ENABLE_SECURE_COOKIE: 'false'
       VELA_REPO_ALLOWLIST: '*'
       VELA_SCHEDULE_ALLOWLIST: '*'
+      VELA_OTEL_TRACING_ENABLE: true
+      VELA_OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      VELA_OTEL_TRACING_SAMPLER_RATELIMIT_PER_SECOND: 100
     env_file:
       - .env
     restart: always
@@ -152,18 +155,29 @@ services:
   #
   # https://www.vaultproject.io/
   vault:
-    image: hashicorp/vault:latest
-    container_name: vault
-    command: server -dev
+   image: hashicorp/vault:latest
+   container_name: vault
+   command: server -dev
+   networks:
+     - vela
+   environment:
+     VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
+     VAULT_DEV_ROOT_TOKEN_ID: vela
+   ports:
+     - '8200:8200'
+   cap_add:
+     - IPC_LOCK
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
     networks:
       - vela
     environment:
-      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
-      VAULT_DEV_ROOT_TOKEN_ID: vela
+      COLLECTOR_OTLP_ENABLED: true
     ports:
-      - '8200:8200'
-    cap_add:
-      - IPC_LOCK
+      - '16686:16686'
+      - '4318:4318'
 
 networks:
   vela:
