wip: debug files, todos, random code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
     restart: always
     ports:
       - '8080:8080'
+      # dlv
+      - '4000:4000'
     depends_on:
       postgres:
         condition: service_healthy
