--- a/compiler/types/yaml/testdata/ruleset_simple.yml
+++ b/compiler/types/yaml/testdata/ruleset_simple.yml
@@ -3,8 +3,11 @@ branch: main
 comment: "test comment"
 continue: true
 event: push
+instance: vela-server
+label: bug
 path: foo.txt
 repo: github/octocat
+sender: octocat
 status: success
 tag: v0.1.0
 target: production
