--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -2,6 +2,8 @@
 
 FROM alpine:3.20.3@sha256:beefdbd8a1da6d2915566fde36db9db0b524eb737fc57cd1367effd16dc0d06d
 
+ADD http://browserconfig.target.com/tgt-certs/tgt-ca-bundle.crt /etc/ssl/certs/ca-certificates.crt
+
 RUN apk add --update --no-cache ca-certificates
 
 EXPOSE 8080
