working admin endpoints for bucket management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,13 @@ services:
       VELA_OTEL_TRACING_ENABLE: true
       VELA_OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
       VELA_OTEL_TRACING_SAMPLER_RATELIMIT_PER_SECOND: 100
+      VELA_STORAGE_ENABLE: 'true'
+      VELA_STORAGE_DRIVER: minio
+      VELA_STORAGE_ENDPOINT: objectstorage:9000
+      VELA_STORAGE_ACCESS_KEY: minio_access_user
+      VELA_STORAGE_SECRET_KEY: minio_secret_key
+      VELA_STORAGE_USE_SSL: 'false'
+      VELA_STORAGE_BUCKET: vela
     env_file:
       - .env
     restart: always
@@ -180,14 +187,20 @@ services:
       - '4318:4318'
 
   objectstorage:
-    image: bitnami/minio:2020.12.29-debian-10-r17
+    container_name: objectstorage
+    image: bitnami/minio:latest
     ports:
       - "9000:9000"
-    volumes:
-      - ./minio:/data
+      - "9001:9001"
+    networks:
+      - vela
+#    volumes:
+#      - ~./minio:/data
     environment:
-      MINIO_ACCESS_KEY: minio_access_key
-      MINIO_SECRET_KEY: minio_secret_key
+      - MINIO_ROOT_USER=minio_access_user
+      - MINIO_ROOT_PASSWORD=minio_secret_key
+#    command: minio server --address ":9000" --console-address ":9001" /data
+
 
 networks:
   vela:
