--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,8 +74,12 @@ services:
   #
   # https://go-vela.github.io/docs/administration/worker/
   worker:
+#    container_name: worker
+#    image: target/vela-worker:latest
+    build:
+      context: ../.
+      dockerfile: Dockerfile
     container_name: worker
-    image: target/vela-worker:latest
     networks:
       - vela
     environment:
