--- a/internal/testdata/top_level_anchor.yml
+++ b/internal/testdata/top_level_anchor.yml
@@ -1,10 +1,9 @@
-aliases:
-  images:
-    alpine: &alpine-image
+version: "1"
+
+<<: &alpine-image
       image: alpine:latest
 
-  env:
-    dev-env: &dev-parameters
+<<: &dev-parameters
       parameters:
         REGION: dev 
 
