--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,8 @@ services:
       VELA_STORAGE_ENABLE: 'true'
       VELA_STORAGE_DRIVER: minio
       VELA_STORAGE_ADDRESS: "http://minio:9000"
-      VELA_STORAGE_ACCESS_KEY: minio_access_user
-      VELA_STORAGE_SECRET_KEY: minio_secret_key
+      VELA_STORAGE_ACCESS_KEY: minioadmin
+      VELA_STORAGE_SECRET_KEY: minioadmin
       VELA_STORAGE_USE_SSL: 'false'
       VELA_STORAGE_BUCKET: vela
     env_file:
@@ -72,8 +72,12 @@ services:
   #
   # https://go-vela.github.io/docs/administration/worker/
   worker:
+#    container_name: worker
+#    image: target/vela-worker:latest
+    build:
+      context: ../worker
+      dockerfile: Dockerfile
     container_name: worker
-    image: target/vela-worker:latest
     networks:
       - vela
     environment:
@@ -191,19 +195,33 @@ services:
 
   minio:
     container_name: minio
-    image: minio/minio:latest
-    ports:
-      - "9000:9000"
-      - "9001:9001"
+    image: minio/minio
+    restart: always
+    expose:
+      - "9000"
+      - "9001"
     networks:
       - vela
 #    volumes:
 #      - ~./minio:/data
     environment:
-      - MINIO_ROOT_USER=minio_access_user
-      - MINIO_ROOT_PASSWORD=minio_secret_key
-    command: minio server --address ":9000" --console-address ":9001" /data
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    command: minio server --address "0.0.0.0:9000" --console-address ":9001" /data
 
+  # The `nginx` compose service hosts the NGINX reverse proxy.
+  nginx:
+    image: nginx:latest
+    container_name: minio_nginx
+    restart: always
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+     - "9002:9002"
+    depends_on:
+      - minio
+    networks:
+      - vela
 
 networks:
   vela:
