--- a/compiler/types/yaml/buildkite/testdata/step.yml
+++ b/compiler/types/yaml/buildkite/testdata/step.yml
@@ -43,4 +43,11 @@
     vars:
       registry: index.docker.io
       repo: github/octocat
-      tags: [ latest, dev ]
+      tags: [latest, dev]
+
+- name: test-reports
+  image: golang:1.20
+  pull: true
+  test_report:
+    results: ["test-results/*.xml"]
+    attachments: ["screenshots/**/*.png", " video/*.mp4"]
