--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,12 +72,12 @@ services:
   #
   # https://go-vela.github.io/docs/administration/worker/
   worker:
-#    container_name: worker
-#    image: target/vela-worker:latest
-    build:
-      context: ../worker
-      dockerfile: Dockerfile
     container_name: worker
+    image: target/vela-worker:latest
+#    build:
+#      context: ../worker
+#      dockerfile: Dockerfile
+#    container_name: worker
     networks:
       - vela
     environment:
@@ -197,9 +197,9 @@ services:
     container_name: minio
     image: minio/minio
     restart: always
-    expose:
-      - "9000"
-      - "9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
     networks:
       - vela
 #    volumes:
@@ -207,7 +207,7 @@ services:
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
-    command: minio server --address "0.0.0.0:9000" --console-address ":9001" /data
+    command: minio server --address ":9000" --console-address ":9001" /data
 
   # The `nginx` compose service hosts the NGINX reverse proxy.
   nginx:
