--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       VELA_OTEL_TRACING_SAMPLER_RATELIMIT_PER_SECOND: 100
       VELA_STORAGE_ENABLE: 'true'
       VELA_STORAGE_DRIVER: minio
-      VELA_STORAGE_ADDRESS: "http://minio:9000"
+      VELA_STORAGE_ADDRESS: "http://minio:9000" # Address of the MinIO server
       VELA_STORAGE_ACCESS_KEY: minioadmin
       VELA_STORAGE_SECRET_KEY: minioadmin
       VELA_STORAGE_USE_SSL: 'false'
@@ -74,10 +74,6 @@ services:
   worker:
     container_name: worker
     image: target/vela-worker:latest
-#    build:
-#      context: ../worker
-#      dockerfile: Dockerfile
-#    container_name: worker
     networks:
       - vela
     environment:
@@ -202,11 +198,10 @@ services:
       - "9001:9001"
     networks:
       - vela
-#    volumes:
-#      - ~./minio:/data
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
+      - MINIO_SERVER_URL=http://minio
     command: minio server --address ":9000" --console-address ":9001" /data
 
   # The `nginx` compose service hosts the NGINX reverse proxy.
@@ -217,7 +212,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-     - "9002:9002"
+     - "80:80"
     depends_on:
       - minio
     networks:
