--- a/nginx.conf
+++ b/nginx.conf
@@ -8,9 +8,9 @@ http{
 
   server {
 
-    listen       9002;
-    listen  [::]:9002;
-    server_name _;
+    listen       80;
+    listen  [::]:80;
+    server_name minio;
 
 
     # Allow special characters in headers
@@ -24,17 +24,17 @@ http{
     location / {
       # Disable buffering
       proxy_buffering off;
+      proxy_pass_request_headers on;
+      proxy_connect_timeout 300;
+      # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+      proxy_http_version 1.1;
+     # proxy_set_header Connection "";
+      chunked_transfer_encoding off;
       proxy_set_header Host minio:9000;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_pass_request_headers on;
       proxy_set_header Authorization $http_authorization;
-      proxy_connect_timeout 300;
-      # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      chunked_transfer_encoding off;
       proxy_pass "http://minio"; # This uses the upstream directive definition to load balance
     }
   }
