--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,12 +73,17 @@ services:
   # https://go-vela.github.io/docs/administration/worker/
   worker:
     container_name: worker
-    image: target/vela-worker:latest
+    image: worker:local
+#    image: target/vela-worker:latest
+    build:
+        context: ../worker
+        dockerfile: ${VELA_WORKER_DOCKERFILE:-Dockerfile}
     networks:
       - vela
     environment:
       EXECUTOR_DRIVER: linux
       QUEUE_DRIVER: redis
+      QUEUE_ADDR: 'redis://redis:6379'
       VELA_BUILD_LIMIT: 1
       VELA_BUILD_TIMEOUT: 30m
       VELA_LOG_LEVEL: trace
@@ -165,18 +170,18 @@ services:
   #
   # https://www.vaultproject.io/
   vault:
-   image: hashicorp/vault:latest
-   container_name: vault
-   command: server -dev
-   networks:
-     - vela
-   environment:
-     VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
-     VAULT_DEV_ROOT_TOKEN_ID: vela
-   ports:
-     - '8200:8200'
-   cap_add:
-     - IPC_LOCK
+    image: hashicorp/vault:latest
+    container_name: vault
+    command: server -dev
+    networks:
+      - vela
+    environment:
+      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
+      VAULT_DEV_ROOT_TOKEN_ID: vela
+    ports:
+      - '8200:8200'
+    cap_add:
+      - IPC_LOCK
 
   jaeger:
     image: jaegertracing/all-in-one:latest
@@ -201,7 +206,8 @@ services:
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
-      - MINIO_SERVER_URL=http://minio
+#      - MINIO_SERVER_URL=http://minio
+#      - MINIO_BROWSER_REDIRECT_URL=http://
     command: minio server --address ":9000" --console-address ":9001" /data
 
   # The `nginx` compose service hosts the NGINX reverse proxy.
