add compile test for eval

--- a/compiler/native/testdata/steps_pipeline.yml
+++ b/compiler/native/testdata/steps_pipeline.yml
@@ -29,6 +29,8 @@ steps:
     pull: true
 
   - name: build
+    ruleset:
+      eval: HELLO == "Hello, Global Environment"
     commands:
       - ./gradlew build
     environment:
