--- a/compiler/types/yaml/yaml/testdata/ruleset_op_match.yml
+++ b/compiler/types/yaml/yaml/testdata/ruleset_op_match.yml
@@ -3,7 +3,8 @@ if:
   branch: [ main ]
   event: push
   tag: "^refs/tags/(\\d+\\.)+\\d+$"
-  eval: 'foo == "bar"'
+  matcher: regexp
+  operator: and
 unless:
   event:
     - deployment
@@ -11,6 +12,6 @@ unless:
     - comment
     - schedule
   path: [ foo.txt, /foo/bar.txt ]
-matcher: regexp
-operator: or
+  matcher: filepath
+  operator: or
 continue: true
